--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,12 @@ body {
   gap: 1rem;
   margin-top: 2rem;
 }
+.pesquisa-label {
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #fff;
+  margin-bottom: 12px;
+  gap: 8px;
+  display: flex;
+  justify-content: right;
+}
