--- a/src/components/header/header-components.module.css
+++ b/src/components/header/header-components.module.css
@@ -1,6 +1,4 @@
-header{ 
 
-}
 .nav {
     text-align: left;
     background-color: rgb(28, 27, 27);
@@ -16,4 +14,12 @@ header{
 p {
     font-weight: bold;
     font-size: 20px;
+}
+a { 
+    padding-left: 5vh;
+    align-items: center; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    gap: 15px;
 }
