--- a/src/components/header/header-components.module.css
+++ b/src/components/header/header-components.module.css
@@ -10,6 +10,8 @@
     display: flex; 
     align-items: center; 
     gap: 15px;
+    font-weight: bold;
+    color: #fff;
 }
 p {
     font-weight: bold;
